# orange3-associate

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.pypi  README.rst  _fpgrowth.cpp  afopt.py  apriori.py  fpgrowth.py  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build_wheels.yml  release.yml  test.yml
.travis/: install_orange.sh
doc/: Makefile  conf.py  index.rst  make.bat  scripting.rst  widget_data.json  widgets.json
doc/widgets/: associationrules.md  associationrules.rst  frequentitemsets.md  frequentitemsets.rst
doc/widgets/images/: association-rules-tags.txt  frequent-itemsets-tags.txt
orangecontrib/associate/: __init__.py  _fpgrowth.cpp  _fpgrowth.pyd  fpgrowth.py
orangecontrib/associate/widgets/: __init__.py  owassociate.py  owitemsets.py
orangecontrib/associate/widgets/tests/: test_owassociate.py
orangecontrib/associate/widgets/tests/data/: test_owitemsets.py
